@@ -9,5 +9,10 @@ override_dh_auto_test:
 	# Disable dh_auto_test at build time
 	:
 
+override_dh_auto_install:
+	$(overridden_command)
+	# do not ship development stuff
+	find debian/akregator -name '*.so' -type l -delete
+
 override_dh_strip:
 	$(overridden_command) --dbgsym-migration='kdepim-dbg (<= 4:15.12.1-1~~)'
