@@ -1,5 +1,7 @@
 akregator (4:17.08.3-2) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Do not ship development symlinks of private libraries.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 26 Dec 2017 09:23:30 +0100
 
